# tredence_gap_assessment

./: .gitignore  README.md  pyproject.toml
Cloud Run deployment/hello_cloud_run/: Dockerfile  main.py
Evaluation/: ground_truth.json  rag_evaluation.ipynb
experiments/: connection_test.ipynb  phoenix_server.py  phoenix_trace.ipynb  register_prompt.ipynb
gap_assessment_agent/: gcp_rag.ipynb  initial_rag.ipynb  register_prompt_gcp.ipynb
gap_assessment_agent/rag_adk_agent/: .env.example  agent.py
synthetic_data_experiment/: .env.example  __init__.py  agent.py  decompose.py  evidence.py  models.py  synthesize.py
synthetic_data_experiment/.adk/: session.db
synthetic_data_experiment/notebooks/: de_test.ipynb
synthetic_data_experiment/tools/: __init__.py  discovery_engine.py
