[project]
name = "tredence-gap-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=2.3.0",
    "google-cloud-logging>=3.16.0",
    "google-genai>=2.10.0",
    "ipykernel>=7.3.0",
    "opentelemetry-exporter-gcp-trace>=1.12.0",
    "opentelemetry-exporter-otlp>=1.42.1",
]
