[project]
name = "tredence-gap-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-otel>=0.13.0",
    "arize-phoenix-otel>=0.16.1",
    "arize-phoenix[pydantic-ai]>=17.9.0",
    "google-adk>=2.3.0",
    "google-cloud-logging>=3.16.0",
    "google-genai>=2.10.0",
    "ipykernel>=7.3.0",
    "openinference-instrumentation-google-adk>=0.1.15",
    "opentelemetry-exporter-gcp-trace>=1.12.0",
    "opentelemetry-exporter-otlp>=1.42.1",
    "pydantic-ai>=0.0.5",
    "python-dotenv>=1.2.2",
    "google-cloud-discoveryengine>=0.13.0",
]
